swagger: add secret, update jwt verification
