# model/swagger.go
@@ -11,3 +11,12 @@ type SwaggerUserLoginRequest struct {
 	Email    string `json:"email" example:"john@example.com"`
 	Password string `json:"password" example:"secretpass123"`
 }
+
+type SwaggerSecretRequest struct {
+	Title    string `json:"title" example:"Facebook Credentials"`
+	Username string `json:"username" example:"mokhlesur.mahin"`
+	Password string `json:"password" example:"mahin"`
+	Note     string `json:"note" example:"This is my Facebook Password. Login korben na."`
+	Email    string `json:"email" example:"john@example.com"`
+	Website  string `json:"website" example:"https://www.facebook.com/"`
+}
